complte product list , show items count on header and format code

--- a/abrnoc-interview-task/tsconfig.node.json
+++ b/abrnoc-interview-task/tsconfig.node.json
@@ -13,7 +13,6 @@
     "moduleDetection": "force",
     "noEmit": true,
 
-    
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -23,9 +22,5 @@
 
     "types": ["vite/client", "node"]
   },
-  "include": [
-    "vite.config.ts",
-    "src/**/*.ts",
-    "src/**/*.d.ts"
-  ]
+  "include": ["vite.config.ts", "src/**/*.ts", "src/**/*.d.ts"]
 }
