--- a/abrnoc-interview-task/package.json
+++ b/abrnoc-interview-task/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.36.0",
