--- a/abrnoc-interview-task/tsconfig.json
+++ b/abrnoc-interview-task/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["vite/client"],
+    "types": ["vite/client", "jest"],
     "resolveJsonModule": true
   }
 }
