polish code and ui

--- a/abrnoc-interview-task/tsconfig.json
+++ b/abrnoc-interview-task/tsconfig.json
@@ -2,7 +2,8 @@
   "files": [],
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "types": ["vite/client", "jest"],
