--- a/abrnoc-interview-task/tsconfig.json
+++ b/abrnoc-interview-task/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "bundler",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["vite/client", "jest"],
+    "types": ["vite/client", "jest", "node"],
     "resolveJsonModule": true
   }
 }
